[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "screening-boosted-trees"
version = "0.0.1"
description = "GBDT with absolute-threshold screening split selection, accelerated by fused Triton kernels."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Screening Boosted Trees authors" },
]
keywords = [
    "gbdt",
    "gradient-boosting",
    "boosted-trees",
    "triton",
    "screening",
    "feature-screening",
    "gpu",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
# Triton-accelerated GPU path. The wheel selection is automatic per-platform:
#   - Windows  -> triton-windows  (community wheel that mirrors upstream Triton)
#   - Linux    -> triton          (official)
#   - macOS    -> triton          (official; CPU-only build)
# Both packages expose `import triton` and `import triton.language as tl`,
# so the kernel source is identical across platforms.
triton = [
    "torch>=2.3",
    "triton-windows>=3.0.0; sys_platform == 'win32'",
    "triton>=3.0.0; sys_platform != 'win32'",
]
dev = [
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/your-org/screening-boosted-trees"
Repository = "https://github.com/your-org/screening-boosted-trees"
"Bug Tracker" = "https://github.com/your-org/screening-boosted-trees/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["sbt*"]
