[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ibu-boost"
version = "0.1.0"
description = "GBDT with absolute-threshold screening split selection, accelerated by fused Triton kernels."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "ibusan100" },
]
keywords = [
    "gbdt",
    "gradient-boosting",
    "boosted-trees",
    "triton",
    "screening",
    "feature-screening",
    "gpu",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
# Triton-accelerated GPU path. The wheel selection is automatic per-platform:
#   - Windows  -> triton-windows  (community wheel that mirrors upstream Triton)
#   - Linux    -> triton          (official)
# Both packages expose `import triton` and `import triton.language as tl`,
# so the kernel source is identical across platforms.
triton = [
    "torch>=2.3",
    "triton-windows>=3.0.0; sys_platform == 'win32'",
    "triton>=3.0.0; sys_platform != 'win32'",
]
dev = [
    "pytest>=8.0",
    "scikit-learn>=1.3",
    "lightgbm>=4.0",
    "xgboost>=2.0",
]

[project.urls]
Homepage = "https://github.com/ibusan100/ibu_boost"
Repository = "https://github.com/ibusan100/ibu_boost"
"Bug Tracker" = "https://github.com/ibusan100/ibu_boost/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ibu_boost*"]
